# tisa

./: CMakeLists.txt
examples/: persistence-example.cpp  sqlite-example.cpp  svg-example.cpp
include/azuik/algorithm/: functional.hpp  math.hpp  sequential.hpp
include/azuik/container/: heap.hpp  iterable.hpp  iterator.hpp  list.hpp  map.hpp  set.hpp  tensor.hpp  tree.hpp  vector.hpp  view.hpp
include/azuik/container/detail/: parts.hpp
include/azuik/core/: allocator.hpp  error.hpp  logging.hpp  macro.hpp  memory.hpp  mpl.hpp
include/azuik/io/: file.hpp  http.hpp  persistence.hpp  sqlite.hpp  stream.hpp  svg.hpp
include/azuik/util/: environment.hpp  plot.hpp
source/azuik/core/: error.cpp  logging.cpp
source/azuik/io/: http.cpp  sqlite.cpp  svg.cpp
test/: main.cpp
test/azuik/: toolbox.hpp
test/azuik/algorithm/: sequential_test.cpp
test/azuik/container/: list_test.cpp  map_test.cpp  set_test.cpp  tree_test.cpp  vector_test.cpp  view_test.cpp
test/azuik/io/: persistence_test.cpp
tools/: tisa-macro.cpp
